--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>прикол</title>
   </head>
   <body>
-    <video src="varyscaryscream.mp4"> </video>
+    <video src="varyscaryscream.mp4" autoplay muted> </video>
   </body>
 </html>
